<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="U_SewStatusWord1" Id="{6e4f4720-b2c0-4995-8d00-dad0e04f65b9}">
    <Declaration><![CDATA[TYPE U_SewStatusWord1 :
UNION
	nUint: UINT;
	aBits: ST_SewSTatusWord;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>